<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.MainActivity"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">
        <!-- Orientación vertical hace referencia al modo de visualización de los componentes
        dentro del layout-->

        <!-- La unidad de medida "dp" se utiliza en Android para hacer referencia a los
        padding y márgenes de un componente en Android. A diferencia de "sp", se utilizan
        para los textos-->

        <!-- wrap_content hace que sus atributos internos se ajusten a su contenido-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30sp"
            android:text="@string/label_login"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <!-- Reemplaza "tu_logo" con el nombre de tu imagen de logo -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/label_email" />


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/label_password" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:background="@color/colorBtnLogin"
                android:text="@string/btn_login" />

            <TextView
                android:id="@+id/tvGoToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/label_link_register" />

            <!-- match_content hace que sus atributos internos se ajusten al ancho total del
            elemento padre-->
        </LinearLayout>
    </LinearLayout>
</ScrollView>
